# next

./: .editorconfig  .env.dev  .env.dev-test  .env.development  .env.local  .env.local_copy  .env.prod  .env.production  .env.staging  .eslintrc.json  .gitignore  .gitmodules  .jsbeautifyrc  .readthedocs.yaml  .readthedocs.yml  CHANGES  Dockerfile  HIGH LEVEL  LICENCE  LICENSE  Makefile  Makefile-old  Makefile.benchmark  Makefile.common  Makefile.debug  Makefile.release  Makefile.test  README  README.md  SETUP  TODO  build.sh  client.cpp  client.make  commands.sh  commit  config.json  cypress.json  deploy  deploy.sh  (+55 more)
.diagrams/: README.md  infra-prod.plantuml  overview.plantuml  portal_entities.plantuml  portal_init.plantuml  relay-state.plantuml  relays.plantuml  storage_entities.plantuml
.semaphore/: Dockerfile  README.md  consoles.yml  deploy-backend.yml  deploy-config.yml  deploy-database.yml  deploy-development.yml  deploy-prod.yml  deploy-production.yml  deploy-relay.yml  deploy-staging.yml  deploy.yml  dev-deploy.yml  dev5-deploy.yml  development-deploy.yml  functional-test-api.yml  functional-test-backend.yml  functional-test-database.yml  functional-test-portal.yml  functional-test-relay.yml  functional-test-sdk.yml  functional-test-sdk5.yml  functional-test-terraform.yml  functional-tests-backend.yml  functional-tests-sdk4.yml  functional-tests-sdk5.yml  functional-tests.yaml  functional-tests.yml  happy-path.yaml  happy-path.yml  load-tests.yml  nrb-deploy.yml  production-debug-deploy.yml  production-deploy.yml  production-esl-deploy.yml  sdk-tests.yml  semaphore.yml  soak-test-relay.yml  staging-deploy.yml  test.yml  (+8 more)
.terraform/: .terraform.lock.hcl  dev-5-373713-9504544ba89c.json  dev5_main.tf  dev5_variables.tf  id_rsa_semaphore_terraform  id_rsa_semaphore_terraform.pub  terraform.tfstate  terraform.tfstate.backup
NetworkNext/: NetworkNext.uplugin
admin/: admin.go  context_handler.go  endpoint_helper.go  role_handler.go
analytics/: analytics_test.go  googlebigquery.go  googlepubsub.go  local.go  pubsub_forwarder.go  stats_entry.go
backend/: helpers.go
billing/: billing.go  billing_entry.go  billing_test.go  googlebigquery.go  googlebigtable.go  googlepubsub.go  helper.go  helpers.go  local.go  noop.go  pubsub_forwarder.go  route_request_builder.go  types.go
cmd/: docker-compose.yaml  token.go
config/: akamai.txt  amazon.txt  google.txt  multiplay.txt  unity.txt  vultr.txt
core/: bitpacker.go  core.go  core_bitpacker.go  core_cost_matrix.go  core_entity_id_old.go  core_id.go  core_nibblins.go  core_optimize.go  core_read_write_old.go  core_relay_database.go  core_route.go  core_route_matrix.go  core_server_update_packet.go  core_session_response_packet.go  core_session_update_packet.go  core_sodium.go  core_stats_database.go  core_stream.go  core_test.go  core_tokens.go  db.go  helper_test.go  history.go  history_test.go  optimize  optimize.go  optimize.sh  relay_database.go  relay_database_test.go  server_update_packet.go  session_response_packet.go  session_update_packet.go  stats_database.go  stats_database_test.go
crypto/: crypto.go  crypto_test.go  misc.go  read.go  sodium.go  sodium_test.go  write.go
dataflow/: .project  README.md  dataflow.go  pipelines.json  pom.xml
deploy/: Dockerfile  README.md  app.service  bootstrap.sh  build-artifact.sh  build-artifacts.sh  build-load-test-artifacts.sh  client-spawner.service  client-spawner.sh  client_bootstrap.sh  deploy-portal.sh  deploy.sh  ghost_army_bootstrap.sh  nginx.conf  portal-bootstrap.sh  prod.sh  publish-load-test-artifacts.sh  publish.sh  relay-update.sh  server-spawner.service  server-spawner.sh  staging_servers.txt  vm-startup.sh  vm-update-app.sh
docker/: analytics.Dockerfile  api.Dockerfile  base.Dockerfile  client.Dockerfile  magic_backend.Dockerfile  map_cruncher.Dockerfile  portal.Dockerfile  portal_cruncher.Dockerfile  postgres.Dockerfile  raspberry_backend.Dockerfile  raspberry_client.Dockerfile  raspberry_server.Dockerfile  relay.Dockerfile  relay_backend.Dockerfile  relay_gateway.Dockerfile  server.Dockerfile  (+3 more)
sdk/: TODO  (+22 more)
visualstudio/linux/: CMakeLists.txt  CMakeSettings.json  generateSymLink.bat  readme.txt
(+3642 files in other folders)
